Fixed broken automatic import in test